# teething

./: .gitignore  ADVANCED_FEATURES_PLAN.md  CACHING_IMPLEMENTATION.md  IMPROVEMENT_PLAN.md  README.md  attendance_import.py  docker-compose.yml  env-template.txt  manage.py  pyproject.toml  requirements.nbook.txt  requirements.txt  schema.yml  test_marimo.py  test_progressive_logic.py  testing_plan.md
.github/: labels.yml
Garbage/: README.md  REPORT_2025.xlsx  USER_GUIDE.md  analyze_attendance.py  cleanup.py  config.ini  config_network.ini  consolidate_csv.py  create_comprehensive_report.py  create_problematic_employees_chart.py  excel_to_csv.py  fix_name_variations.py  generate_report.bat  generate_report.sh  generate_report_network.sh  june_analysis.py  requirements.txt  run_analysis.py  setup_and_run.sh
Implementation/: ANALYTICS_IMPLEMENTATION_SUMMARY.md  CLOCK_IN_OUT_FUNCTIONALITY_VERIFICATION.md  COMPREHENSIVE_NAVIGATION_PLAN.md  DATA_ANALYTICS_STRATEGY.md  ENHANCED_REPORTS_IMPLEMENTATION_PLAN.md  LOCATION_TRACKING_FINAL_SUMMARY.md  LOCATION_TRACKING_IMPLEMENTATION_COMPLETE.md  LOCATION_TRACKING_IMPLEMENTATION_PLAN.md  NAVIGATION_HIERARCHY_FIX_PLAN.md  OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  PHASE_1_IMPLEMENTATION_SUMMARY.md  PHASE_1_SUMMARY.md  PHASE_2_IMPLEMENTATION_SUMMARY.md  PHASE_2_SUMMARY.md  PHASE_3_IMPLEMENTATION_SUMMARY.md  PHASE_3_SUMMARY.md  PHASE_4_SUMMARY.md  PHASE_5_SUMMARY.md  REPORT_ENHANCEMENT_ROADMAP.md  SYSTEMIC_TIMEZONE_FIX_SUMMARY.md  TEMPLATE_STYLING_CONSISTENCY_REPORT.md  TIMEZONE_FIX_IMPLEMENTATION.md  USER_ROLES_IMPLEMENTATION_PLAN.md  (+4 more)
(+196 files in other folders)
