[project]
name = "road-attendance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "django>=4.2.20",
    "django-filter>=25.1",
    "djangorestframework>=3.16.0",
    "drf-spectacular>=0.28.0",
    "markdown>=3.7",
]

[dependency-groups]
nbook = [
    "httpx>=0.28.1",
    "marimo[recommended]>=0.12.0",
    "plotly>=6.0.1",
    "polars[numpy,pandas,plot,pydantic,timezone]>=1.26.0",
    "pydantic>=2.11.1",
]
